# boilerplate-python

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/app/: __init__.py  main.py
src/app/api/: __init__.py
src/app/core/: __init__.py  config.py
src/app/models/: __init__.py
src/app/services/: __init__.py
tests/: __init__.py  test_main.py
