[project]
name = "app"
version = "0.1.0"
description = "Modern Python 3.12 project managed by uv"
authors = [{ name = "Patrik Garten", email = "info@garten.dev" }]
requires-python = ">=3.12"

[project.scripts]
app = "app.main:cli"

# Dependencies (runtime)
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29,<1.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

# uv settings (lockfile reproducibility)
[tool.uv]
resolver = "lowest-direct"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "COM", "C4", "DTZ", "T10", "EM", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]
unfixable = ["F401", "F841"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.mccabe]
max-complexity = 10

# Mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false 